--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,7 @@ nav li a {
   text-align: center;
   padding: 25px 16px;
   text-decoration: none;
+  transition: background-color 0.35s, color 0.35s;
 }
 
 nav li a:hover, .dropdown-content a:hover {
