--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,10 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  position: sticky;
+  top: 0;
+  left: 0;
 }
 
 header img {
