--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-body {
+main {
   margin: auto 50px;
   font-size: 1em;
 }
@@ -75,8 +75,9 @@ table {
 }
 
 .news-card {
+  box-sizing: border-box;
   max-width: 300px;
-  margin: 0 auto;
+  margin: 0 5px;
 }
 
 input[type="text"], textarea {
@@ -124,7 +125,7 @@ hr.fans-appeal {
   100% { opacity: 1; top: 0px; z-index: 1; }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 769px) {
   body {
     font-size: 0.8em;
   }
@@ -135,6 +136,7 @@ hr.fans-appeal {
 
   .news-card {
     max-width: 450px;
+    margin: 0 auto;
   }
 
   table {
@@ -181,7 +183,6 @@ hr.fans-appeal {
   top: 0;
   left: 0;
 }
-
 nav ul {
   display: inline-block;
   list-style-type: none;
@@ -190,11 +191,9 @@ nav ul {
   overflow: hidden;
   height: 100%;
 }
-
 nav li {
   float: left;
 }
-
 nav li a {
   display: inline-block;
   color: #000;
@@ -203,12 +202,10 @@ nav li a {
   text-decoration: none;
   transition: background-color 0.35s, color 0.35s;
 }
-
 nav li a:hover, .dropdown-content a:hover {
   background-color: #555;
   color: white;
 }
-
 .dropdown-content {
   display: none;
   position: absolute;
@@ -217,7 +214,6 @@ nav li a:hover, .dropdown-content a:hover {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
-
 .dropdown-content a {
   display: block;
   color: #000;
@@ -225,7 +221,6 @@ nav li a:hover, .dropdown-content a:hover {
   padding: 8px 16px;
   text-decoration: none;
 }
-
 li.dropdown {
   display: inline-block;
 }
